# lipopick

./: .gitignore  CLAUDE.md  README.md  lipopick_project_prompt.md  pyproject.toml  requirements.txt
lipopick/: __init__.py  cli.py  config.py  dog.py  extraction.py  io.py  mask.py  morph.py  mpi.py  nms.py  pipeline.py  pyramid.py  refine.py  template.py  viz.py
scripts/: make_relion_jobs.py  make_results_plot.py  pick_particles.py  run_mpi.sh  size_binning.py  summarize_picks.py  test_real_data.py
tests/: conftest.py  test_dog.py  test_mask.py  test_morph.py  test_mpi.py  test_nms.py  test_pipeline.py  test_pyramid.py  test_template.py
